# ChangeLog for media-libs/netpbm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.187 2008/04/13 07:06:44 vapier Exp $

*netpbm-10.26.53 (13 Apr 2008)

  13 Apr 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.53.ebuild:
  Version bump.

  29 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +files/netpbm-10.42.0-gcc43.patch, netpbm-10.26.52.ebuild,
  netpbm-10.42.0.ebuild:
  Fix building with gcc-4.3 #211296.

*netpbm-10.42.0 (28 Mar 2008)
*netpbm-10.26.52 (28 Mar 2008)

  28 Mar 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.52.ebuild,
  +netpbm-10.42.0.ebuild:
  Version bumps.

*netpbm-10.26.51 (08 Mar 2008)

  08 Mar 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.51.ebuild:
  Version bump.

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> netpbm-10.41.0.ebuild:
  Dont keep auto-package creation in default ebuild as it breaks things
  #210074 by Colin Macdonald.

*netpbm-10.26.50 (14 Feb 2008)

  14 Feb 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.50.ebuild:
  Version bump.

  10 Feb 2008; Mike Frysinger <vapier@gentoo.org> netpbm-10.41.0.ebuild:
  Touchup src_install to match newer file layout #209526 by Diego.

*netpbm-10.41.0 (09 Feb 2008)

  09 Feb 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.41.0.ebuild:
  Version bump.

*netpbm-10.26.49 (28 Jan 2008)

  28 Jan 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.49.ebuild:
  Version bump.

*netpbm-10.26.48 (01 Jan 2008)

  01 Jan 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.48.ebuild:
  Version bump.

*netpbm-10.26.47 (08 Dec 2007)

  08 Dec 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.47.ebuild:
  Version bump.

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> netpbm-10.40.0.ebuild:
  amd64 stable, bug 195698

  20 Oct 2007; Raúl Porcel <armin76@gentoo.org> netpbm-10.40.0.ebuild:
  alpha/ia64/sparc stable wrt #195698
